--- a/styles.css
+++ b/styles.css
@@ -4,23 +4,28 @@ body {
   background: rgb(68, 68, 68);
 }
 
+h1 {
+  font-family: 'Lobster', cursive;
+  font-size: 32pt;
+}
+
 input[type=text] {
   color: white;
-  background-color: rgba(0, 0, 0, 0); /*Transparent*/
+  font-size: 16pt;
+  text-align: center;
+  background: rgba(0, 0, 0, 0);
   border: none;
   outline: none;
-  font-size: 16pt;
   width: 2em;
-  text-align: center;
 }
 
 button {
   color: white;
+  font-size: 16pt;
   background-color: rgba(0, 0, 0, 0);
   border: none;
   cursor: pointer;
   outline: none;
-  font-size: 16pt;
   width: 1.5em;
   height: 1.5em;
   border-radius: 5px;
@@ -38,8 +43,24 @@ button:active {
   transition-duration: 0.1s;
 }
 
+#inputs {
+  height: 6em;
+  margin: auto;
+  margin-top: 3em;
+}
+
+#input_block {
+  display: inline-block;
+}
+
+.input_spacer {
+  display: inline-block;
+  width: 3em;
+}
+
 #clock_area {
   font-size: 16pt;
+  background: rgba(50, 50, 50, 0.5);
   border-style: solid;
   border-width: medium;
   border-radius: 100%;
@@ -47,39 +68,35 @@ button:active {
   width: 15em;
   height: 15em;
   margin: auto;
+  margin-top: 1em;
+}
+
+#clock_background {
+  background: rgb(8, 84, 2);
+  border-radius: 100%;
+  height: 15em;
+  width: 15em;
+  position: absolute;
+}
+
+#mode {
+  font-size: 24pt;
+  margin-top: 25%;
+  margin-top: 2em;
+  margin-left: 3.75em;
+  position: absolute;
 }
 
 #clock {
-  color: white;
+  font-size: 32pt;
   background-color: rgba(0, 0, 0, 0);
   border: none;
   cursor: pointer;
   outline: none;
   border-radius: 100%;
-  width: 15em;
-  height: 15em;
-  /*margin-top: -50%; //If I need to throw it into the middle of the circle
-  position: relative;*/
-}
-
-#inputs {
-  width: 25%;
-  min-height: 12em;
-  margin: auto;
-  margin-top: 3em;
-  /*background: cyan;*/
-}
-
-#break_input {
-  float: left;
-  /*background: red;*/
-}
-
-#session_input {
-  float: right;
-  /*background: green;*/
-}
-
-#clock_area {
-  /*background: blue;*/
+  width: 7.5em;
+  height: 7.5em;
+  padding-top: 2em;
+  margin-left: -3.75em;
+  position: absolute;
 }
